@@ -9,6 +9,8 @@ ubiquity (1.6.1) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Strip translation context for imported strings (e.g. "Navigation|_Back")
     at a lower level so that it applies to the KDE frontend too.
+  * KDE frontend:
+    - Remove some duplicate code during widget translation.
 
  -- Evan Dandrea <evand@ubuntu.com>  Fri, 28 Sep 2007 15:25:34 -0400
 
